# ai-shopify-app-v2

./: app.py  pyproject.toml
static/css/: style.css
static/js/: chat-enhanced.js  chat.js
templates/: contact.html  index.html
